--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			</div>
 			<div class="right_column">
 			<h3>Homework Links</h3>
-			<p><a href="">homework1 link</a></p>
-			<p><a href="">homework2 link</a></p>
+			<p><a href="web/hw1/index.html">homework1 link</a></p>
+			<p><a href="web/hw2/index.html">homework2 link</a></p>
 			</div>
 		</div>
 	</div>
@@ -73,8 +73,8 @@
 	<div id="homework">
 		<h2>Homework Links(to be updated...)</h2>
 		<ul>
-			<li><a href="">homework1 link</a></li>
-			<li><a href="">homework2 link</a></li>
+			<li><a href="web/hw1.html">homework1 link</a>（https://caozhilin.github.io/web/hw1）</li>
+			<li><a href="web/hw2.html">homework2 link</a>(https://caozhilin.github.io/web/hw2)</li>
 		</ul>
 	</div>
 	<div id="diary">
