--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<div id="homework">
 		<h2>Homework Links(to be updated...)</h2>
 		<ul>
-			<li><a href="web/hw1.html">homework1 link</a>（https://caozhilin.github.io/web/hw1）</li>
+			<li><a href="web/hw1.html">homework1 link</a>(https://caozhilin.github.io/web/hw1）</li>
 			<li><a href="web/hw2.html">homework2 link</a>(https://caozhilin.github.io/web/hw2)</li>
 		</ul>
 	</div>
