--- a/web/hw4/index.html
+++ b/web/hw4/index.html
@@ -20,7 +20,7 @@
     <div class ="container">
         <div class="top" id="top">
             <div class="top-left">
-                <a href="index.html"><strong>&laquo; BACK TO </strong>
+                <a href="/index.html"><strong>&laquo; BACK TO </strong>
                 the index</a>
             </div>
             <div class="top-right">
