--- a/web/hw4/index.html
+++ b/web/hw4/index.html
@@ -20,7 +20,7 @@
     <div class ="container">
         <div class="top" id="top">
             <div class="top-left">
-                <a href="/index.html"><strong>&laquo; BACK TO </strong>
+                <a href="index.html"><strong>&laquo; BACK TO </strong>
                 the index</a>
             </div>
             <div class="top-right">
@@ -28,7 +28,7 @@
             </div>
         </div>
         <header>
-                <h1><marquee><span>这是一条公告：软件工程微信墙</span></marquee>
+                <h1><marquee  scrollamount="20"><span>这是一条公告：软件工程微信墙</span></marquee>
                 </h1>   
         </header>
         <div id="board">
