--- a/diary1.html
+++ b/diary1.html
@@ -34,13 +34,13 @@
                 <div class="label">
                     <h3>Thonghts about Wecha Grab Ticket</br>
                    微信抢票 感想</h3>
-                    <p>对于微信抢票的作业做的时候还是有超级多的感想的</p>
+                    <p>对于微信抢票的作业做的时候还是有超级多的感想的。</p>
                     <p>
-                      比如在开始的时候没有对于框架没什么理解，所以就很难有产出
-            
-                   比如说有一些拼写错误还有因为浏览器没有清缓存而造成的错误。这些能够很快的通过排查报错信息得到解决，相信一个人也很容易就能够办到，体现不了结对的意义。但是后来遇到一些我们都不熟悉的库函数就可以一人写代码，另一人查资料辅助。
+                      比如在开始的时候没有对于框架没什么理解，所以就很难有产出。之后找了一个进度比较快的同学，大概讲了一下handlers.py之后就进行得比较快了。但其实之后也发现
+		      助教在文档里对各个接口写的已经比较清楚了，也是自己没有仔细地去读。
                     </p>
                     <p>
+		在上课的时候对于单元测试，
                     但是对于逻辑实现上的一些讨论，就能够显现出结对编程的优越性了。很多包含的库我们两个都不是很熟悉，但这样的话就能够有一个人辅助查资料。最深的体验是，在两个位置上的心态确实是不一样的。当看着同伴写的时候，能够有比较敏锐观察力。然而自己作为舵手在写的时候就会比较紧张，一方面要解释自己这样写的理由，对于一些微小的错误就难以发现。另一方面还要回答同伴提出的疑惑考虑另一种解决方法，
                     就有些手忙脚乱。也出现过两个人都解决不了的情况，只好再去求助他人。感觉在逻辑比较复杂的时候两个人讨论能使解决方案更完善一些，至于简单的工作单人独立完成就好，只是要注意在交接的时候要写好文档或者当面解释描述清楚。
 		</p>
