--- a/diary1.html
+++ b/diary1.html
@@ -43,9 +43,19 @@
 		      在上课的时候对于单元测试，也一直觉得比较鸡肋吧，可能是当时的样例都还是一些比较简单的测试。
 		      而我自己在实际操作中，对一些数据库操作和其他函数的mock也体验到了一些逻辑设计上的难度，而暴露出来的一个小错误帮助了我修改一些
 			  数据库操作时遇到的错误，比如如果查询某个key值的活动为空时，其实会有error但是之前在手机上进行测试的时候只是粗略地得到“对不起，服务器现在无法提供服务”的提示，
-			    当时没有想太多，但是在单元测试的时候确能够非常直观地体现返回消息内容与预期不同，再通过报错信息找到了错误的根源，进一步给数据库查询的地方都加上try,except语句。
-                    但是对于逻辑实现上的一些讨论，就能够显现出结对编程的优越性了。很多包含的库我们两个都不是很熟悉，但这样的话就能够有一个人辅助查资料。最深的体验是，在两个位置上的心态确实是不一样的。当看着同伴写的时候，能够有比较敏锐观察力。然而自己作为舵手在写的时候就会比较紧张，一方面要解释自己这样写的理由，对于一些微小的错误就难以发现。另一方面还要回答同伴提出的疑惑考虑另一种解决方法，
-                    就有些手忙脚乱。也出现过两个人都解决不了的情况，只好再去求助他人。感觉在逻辑比较复杂的时候两个人讨论能使解决方案更完善一些，至于简单的工作单人独立完成就好，只是要注意在交接的时候要写好文档或者当面解释描述清楚。
+			    当时没有想太多，但是在单元测试的时候确能够非常直观地体现返回消息内容与预期不同，再通过报错信息找到了错误的根源，进一步给数据库查询的地方都加上try,
+			    except语句。
+		</p>
+		<p>
+			对于性能测试，由于开始得比较晚，所以测试也只是勉强能够运行，至于模拟多用户就没有做到，在听同学们展示时所说的数据库锁的运用我们也由于时间
+			关系没有进行了。也觉得有一点遗憾吧。
+		</p>
+		<p> 虽然我们组起步比较晚，但是最后也是花上了所有的时间，学习测试、部署。对前端的bug也进行了一些修改，我觉得对于这样一门课来说，确实需要配合一些
+			强度比较高的工作才能有所收获。其实自己的心态也有一个从恐慌到比较平静面对的变化，能够通过Google以及与同学讨论解决问题。在迭代一开发过程中
+			我们还与另外一个小组尝试了一起工作的模式，发现这样一起学习部署能够比较快地上手，相互讨论也提高了沟通能力。
+			
+		</p>
+		<p>希望自己在以后的学习中能够提快自己的进度，提升一下代码能力和工作效率。
 		</p>
                 </div>
         </li>
