--- a/diary1.html
+++ b/diary1.html
@@ -57,6 +57,12 @@
 		</p>
 		<p>希望自己在以后的学习中能够提快自己的进度，提升一下代码能力和工作效率。
 		</p>
+		<h3>Pair-Programming 感想</h3>
+		<p>看了学堂在线上的结对编程视频之后觉得操作起来不是很可行，而且两个人一起写的话可能会有意见相左的时候。</p>
+ <p>在实际操作中，我和刘立同学选择了最简单的管理员登陆模块。最后一遍录制的时候我们还是非常流畅的，没有遇到奇怪的bug。但其实我们把自己原来写的代码删掉之后，有很多地方已经基本上忘记了。所以第一遍录制的时候，有很多愚蠢的错误。
+ 比如说有一些拼写错误还有因为浏览器没有清缓存而造成的错误。这些能够很快的通过排查报错信息得到解决，相信一个人也很容易就能够办到，体现不了结对的意义。但是后来遇到一些我们都不熟悉的库函数就可以一人写代码，另一人查资料辅助。</p>
+ <p>但是对于逻辑实现上的一些讨论，就能够显现出结对编程的优越性了。很多包含的库我们两个都不是很熟悉，但这样的话就能够有一个人辅助查资料。最深的体验是，在两个位置上的心态确实是不一样的。当看着同伴写的时候，能够有比较敏锐观察力。然而自己作为舵手在写的时候就会比较紧张，一方面要解释自己这样写的理由，对于一些微小的错误就难以发现。另一方面还要回答同伴提出的疑惑考虑另一种解决方法。
+ 就有些手忙脚乱。也出现过两个人都解决不了的情况，只好再去求助他人。感觉在逻辑比较复杂的时候两个人讨论能使解决方案更完善一些，至于简单的工作单人独立完成就好，只是要注意在交接的时候要写好文档或者当面解释描述清楚。<p>
                 </div>
         </li>
         </ul>
